real radio input visibility fix

--- a/src/components/RadioInput/radio-input.less
+++ b/src/components/RadioInput/radio-input.less
@@ -2,6 +2,7 @@
   overflow: hidden;
   position: relative;
   margin-right: 15px;
+  display: inline-block;
 }
 
 .radio-input__input {
